--- a/extensions/greenlease-extension/blocks/star_rating.liquid
+++ b/extensions/greenlease-extension/blocks/star_rating.liquid
@@ -34,7 +34,7 @@ text-align: left;
 margin-top:0;
 ">La consommation circulaire avec GreenLeaze</h3>
                 <div style="display: flex">
-                    <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100" style="margin-right: 20px">
+                    <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100"  height="100%" style="margin-right: 20px">
                     <div>
                         <div style="margin-bottom: 30px;font-size:14px;">Choisissez la durée de votre abonnement</div>
                         <div style="margin-bottom: 30px;font-size:14px;">Payez le 1er mois et validez votre abonnement en 3 clics</div>
@@ -42,7 +42,7 @@ margin-top:0;
                     </div>
                 </div>
                 <div>
-                    <img src="{{ 'greenlease.png' | asset_url }}" alt="greenlease logo" width="100" height="100">
+                    <img src="{{ 'greenlease.png' | asset_url }}" alt="greenlease logo" width="300" height="100">
                 </div>
             </div>
             <div class="right">
@@ -397,7 +397,7 @@ console.log(minPricesByDuration);
 			.then(response => response.json())
 			.then(data => {
 			        console.log('send', data);
-				    window.location.href = 'https://pay.greenleaze.com/order/step-1?transaction_id=' + data.uniq ;
+				   // window.location.href = 'https://pay.greenleaze.com/order/step-1?transaction_id=' + data.uniq ;
 
 			})
 			.catch(error => console.error('Error fetching pricing data:', error));
