--- a/extensions/greenlease-extension/blocks/star_rating.liquid
+++ b/extensions/greenlease-extension/blocks/star_rating.liquid
@@ -34,7 +34,7 @@ text-align: left;
 margin-top:0;
 ">La consommation circulaire avec GreenLeaze</h3>
                 <div style="display: flex">
-                    <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100"  height="100%" style="margin-right: 20px">
+                    <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100%"  height="100%" style="margin-right: 20px">
                     <div>
                         <div style="margin-bottom: 30px;font-size:14px;">Choisissez la durée de votre abonnement</div>
                         <div style="margin-bottom: 30px;font-size:14px;">Payez le 1er mois et validez votre abonnement en 3 clics</div>
