--- a/extensions/greenlease-extension/blocks/star_rating.liquid
+++ b/extensions/greenlease-extension/blocks/star_rating.liquid
@@ -49,10 +49,10 @@ margin-top:0;
                 <div class="slider-container">
                     <input type="range" id="monthSlider" min="0" max="3" step="1" value="0">
                     <div class="slider-labels">
-                        <span>6 mois +</span>
-                        <span>12 mois +</span>
-                        <span>18 mois +</span>
-                        <span>24 mois +</span>
+                        <span>12 mois</span>
+                        <span>18 mois</span>
+                        <span>24 mois</span>
+                        <span>36 mois</span>
                     </div>
 
                 </div>
