--- a/cart-drawer.liquid
+++ b/cart-drawer.liquid
@@ -686,30 +686,23 @@
                         <div style="display: flex;gap: 30px;padding: 40px;">
                             <div class="left">
                                 <h3 style="font-family: Baloo;
-                                    font-size: 23px;
-                                    font-weight: 400;
-                                    line-height: 36.2px;
-                                    text-align: left;
-                                    margin-top:0;
-                                    ">
-                                    La consommation circulaire avec GreenLeaze</h3>
+font-size: 23px;
+font-weight: 400;
+line-height: 36.2px;
+text-align: left;
+margin-top:0;
+">La consommation circulaire avec GreenLeaze</h3>
                                 <div style="display: flex">
-
+                                    <img src="https://cdn.shopify.com/extensions/d6ff67d1-5ebe-428f-ba0e-42ab96cf5a13/greenleaze-6/assets/number.png" alt="Number Image" width="100"  height="100%" style="margin-right: 20px">
                                     <div>
-                                        <div style="margin-bottom: 30px;font-size:14px;">Choisissez la durée de votre
-                                            abonnement
-                                        </div>
-                                        <div style="margin-bottom: 30px;font-size:14px;">Payez le 1er mois et validez
-                                            votre abonnement en 3 clics
-                                        </div>
-                                        <div style="font-size:14px;">Profitez de la garantie incluse et de la
-                                            flexibilité de votre abonnement !
-                                        </div>
+                                        <div style="margin-bottom: 30px;font-size:14px;">Choisissez la durée de votre abonnement</div>
+                                        <div style="margin-bottom: 30px;font-size:14px;">Payez le 1er mois et validez votre abonnement en 3 clics</div>
+                                        <div style="font-size:14px;">Profitez de la garantie incluse et de la flexibilité de votre abonnement !</div>
                                     </div>
                                 </div>
-                                <!--<div>
-                    <img src="{{ 'greenlease.png' | asset_url }}" alt="greenlease logo" width="300" height="100">
-                </div>-->
+                                <div>
+                                    <img src="https://cdn.shopify.com/extensions/d6ff67d1-5ebe-428f-ba0e-42ab96cf5a13/greenleaze-6/assets/greenlease.png" alt="greenlease logo" width="300" height="100">
+                                </div>
                             </div>
                             <div class="right">
                                 <div class="slider-container">
