--- a/cart-drawer.liquid
+++ b/cart-drawer.liquid
@@ -14,12 +14,13 @@
 
 	function openModalGreenleaze() {
 		const button = document.getElementById('btn-greenlease');
-
+		console.log('openModalGreenleaze');
 		if (button) {
+			console.log('open modal');
 			const modal = document.querySelector('.modalGreenleaze');
 			modal.style.display = 'block';
 			document.body.appendChild(modal);
-			fetchPriceModal();
+			fetchPriceModalCart();
 			document.getElementById('monthSliderCart').value = 4;
 			updateSliderValueDisplayCart();
 
@@ -57,19 +58,20 @@
 			const calculatePayment = parseRule(rule, {tva, prixHT, duration});
 			const paiementMensuel = calculatePayment();
 
-			console.log("Calculated payment per month:", paiementMensuel);
+			console.log("Calculated payment per month update:", paiementMensuel);
 
 			const fixed = paiementMensuel.toFixed(2);
-
+			console.log('update', fixed);
 			document.getElementById('paiementMensuelCart').innerHTML = `${fixed} €`;
 			document.getElementById('paidTodayCart').innerHTML = `${fixed} €`;
+
 
 		} catch (error) {
 			console.error('Failed to fetch cart contents or update payment:', error);
 		}
 	}
 
-	async function fetchPriceModal(monthDuration = '36') {
+	async function fetchPriceModalCart(monthDuration = '36') {
 
 		fetch("/apps/greenlease-proxy/api/pricing", {
 			method: "GET",
@@ -151,7 +153,7 @@
 				const monthValues = [12, 18, 24, 36];
 				const selectedMonth = monthValues[slider.value];
 
-				fetchPriceModal(selectedMonth)
+				fetchPriceModalCart(selectedMonth)
 				//await updateSliderValueDisplay();
 				//await updatePaymentForSliderValue();
 			});
@@ -706,7 +708,7 @@ margin-top:0;
                             </div>
                             <div class="right">
                                 <div class="slider-container">
-                                    <input type="range" id="monthSliderCart" min="0" max="4" step="1" value="0">
+                                    <input type="range" id="monthSliderCart" min="0" max="3" step="1" value="0">
                                     <div class="slider-labels">
                                         <span>12 mois</span>
                                         <span>18 mois</span>
