--- a/extensions/greenlease-extension/blocks/star_rating.liquid
+++ b/extensions/greenlease-extension/blocks/star_rating.liquid
@@ -24,7 +24,7 @@
 <div class="modal" style="z-index:99999999">
     <div class="modal-content">
         <div class="close" onclick="document.querySelector('.modal').style.display = 'none';">&times;</div>
-        <div style="display: flex;gap: 30px;padding: 40px;">
+        <div class="modalContainer" style="display: flex;gap: 30px;padding: 40px;">
             <div class="left">
                 <h3 style="font-family: Baloo;
 font-size: 23px;
@@ -33,7 +33,7 @@ line-height: 36.2px;
 text-align: left;
 margin-top:0;
 ">La consommation circulaire avec GreenLeaze</h3>
-                <div style="display: flex">
+                <div class="text-modal">
                     <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100"  height="100%" style="margin-right: 20px">
                     <div>
                         <div style="margin-bottom: 30px;font-size:14px;">Choisissez la durée de votre abonnement</div>
@@ -56,7 +56,7 @@ margin-top:0;
                     </div>
 
                 </div>
-                <div style="font-family: Baloo; font-size: 23px; font-weight: 400; line-height: 36.2px; text-align: center;margin-top: 47px;">
+                <div class="abo-title">
                     Votre abonnement
                 </div>
                 <div class="table"
@@ -166,6 +166,7 @@ margin-top:0;
         background-color: rgba(214, 248, 137, 1);
     }
 
+
     .open-modal {
         border: 1px solid rgba(204, 204, 204, 1);
         padding:20px;
@@ -245,18 +246,72 @@ margin-top:0;
         line-height: normal;
 
     }
+    .text-modal {
+        display: flex;
+    }
+    .abo-title {
+        font-family: Baloo; font-size: 23px; font-weight: 400; line-height: 36.2px; text-align: center;margin-top: 47px;
+    }
+    @media screen and (max-width: 1200px) {
+        .abo-title {
+            margin-top: 10px!important;
+        }
+       .modalContainer {
+           display: block!important;
+           padding: 0;
+       }
+        .text-modal {
+            display: none!important;
+        }
+        .left {
+            margin:auto!important;
+            width: 100%!important;
+        }
+        .left img {
+           display: none!important;
+        }
+        .right {
+            margin:auto!important;
+            width: 100%!important;
+        }
+        .right .slider-container {
+            width: 100%!important;
+        }
+    }
+
 </style>
 
 <script type="text/javascript">
 
-	const slider = document.getElementById('monthSlider');
-	const sliderValue = document.getElementById('sliderValue');
+	// const slider = document.getElementById('monthSlider');
+	// var sliderValue = document.getElementById('sliderValue');
 
+	//console.log('sliderValue', sliderValue);
 	const monthValues = [12, 18, 24, 36];
 
-	slider.oninput = function() {
-		sliderValue.innerHTML = monthValues[this.value] + ' months';
-	};
+	// if(slider && sliderValue){
+	// 	slider.oninput = function() {
+	// 		sliderValue.innerHTML = monthValues[this.value] + ' months';
+	// 	};
+    // }
+
+	document.addEventListener('DOMContentLoaded', function() {
+		const slider = document.getElementById('monthSlider');
+		if (slider) {
+			slider.addEventListener('input', async function() {
+				console.log('update slider');
+
+				const monthValues = [12, 18, 24, 36];
+				const selectedMonth = monthValues[slider.value];
+
+				fetchPriceModal(selectedMonth)
+				//await updateSliderValueDisplay();
+				//await updatePaymentForSliderValue();
+			});
+		}
+	});
+
+
 
 
 	function parseRule(rule, values) {
@@ -271,13 +326,12 @@ margin-top:0;
 			const cartContents = await cartContentsRes.json();
 
 			// Check if cart is empty
-			if (cartContents.items.length === 0) {
+			if (cartContents && cartContents?.items?.length === 0) {
 				console.error('Cart is empty');
-				return;
 			}
 
 			// Get the price of the first item in the cart (assuming it's prixHT)
-			const prixHT = parseFloat(cartContents.items[0].price) / 100;
+			const prixHT = cartContents && cartContents?.items && cartContents?.items[0]  ? parseFloat(cartContents?.items[0]?.price) / 100 : 20;
 			const tva = 20 / 100;
 			const duration = 24;
 			const calculatePayment = parseRule(rule, {tva, prixHT, duration});
@@ -367,7 +421,7 @@ margin-top:0;
 		const cartContentsRes = await fetch(window.Shopify.routes.root + 'cart.js');
 		const cartContents = await cartContentsRes.json();
 
-		const prixHT = cartContents ? parseFloat(cartContents.items[0].price) / 100 : null;
+		const prixHT = cartContents && cartContents?.items[0] ? parseFloat(cartContents?.items[0]?.price) / 100 : 20.00;
 
 		Object.keys(minPricesByDuration).forEach((duration, index) => {
 
@@ -387,6 +441,7 @@ margin-top:0;
 		});
 		// default setup span 24
 		updateMonthlyPayment(minPricesByDuration['24'].rule);
+
 		document.querySelectorAll('.open-modal').forEach(button => {
 			button.addEventListener('click', function() {
 				const value = this.getAttribute('data-value');
