--- a/extensions/greenlease-extension/blocks/star_rating.liquid
+++ b/extensions/greenlease-extension/blocks/star_rating.liquid
@@ -26,13 +26,7 @@
         <div class="close" onclick="document.querySelector('.modal').style.display = 'none';">&times;</div>
         <div class="modalContainer" style="display: flex;gap: 30px;padding: 40px;">
             <div class="left">
-                <h3 style="font-family: Baloo;
-font-size: 23px;
-font-weight: 400;
-line-height: 36.2px;
-text-align: left;
-margin-top:0;
-">La consommation circulaire avec GreenLeaze</h3>
+                <h3 class="title-modal">La consommation circulaire avec GreenLeaze</h3>
                 <div class="text-modal">
                     <img src="{{ 'number.png' | asset_url }}" alt="Number Image" width="100"  height="100%" style="margin-right: 20px">
                     <div>
@@ -252,13 +246,29 @@ margin-top:0;
     .abo-title {
         font-family: Baloo; font-size: 23px; font-weight: 400; line-height: 36.2px; text-align: center;margin-top: 47px;
     }
+
+    .title-modal {
+        font-family: Baloo;
+        font-size: 23px;
+        font-weight: 400;
+        line-height: 36.2px;
+        text-align: left;
+        margin-top:0;
+
+    }
+
+
     @media screen and (max-width: 1200px) {
+        .title-modal {
+            font-size: 17px;
+        }
         .abo-title {
             margin-top: 10px!important;
+            font-size: 20px;
         }
        .modalContainer {
            display: block!important;
-           padding: 0;
+           padding: 0!important;
        }
         .text-modal {
             display: none!important;
@@ -503,7 +513,7 @@ margin-top:0;
 			alert("Veuillez ajouter le produit au panier");
 			return; // Exit the function if the cart is empty
 		}
-
+		const shopDomain = "{{ shop.domain }}";
 		fetch("/apps/greenlease-proxy/api/send", {
 			method: "POST",
 			headers: {
@@ -511,7 +521,8 @@ margin-top:0;
 				'Access-Control-Allow-Origin': '*',
 			},
 			body: JSON.stringify({
-				"cartContents": JSON.stringify(cartContents)
+				"cartContents": JSON.stringify(cartContents),
+                "shop": shopDomain
 			}),
 		})  // Adjust this URL based on your server setup
 			.then(response => response.json())
